--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:pKfQ8BgucFXypLO8sPeaTS8w7rNRbDhz1jiiJWIW84I=
+APP_KEY=base64:XEZPymWtaeHjdxza4n7cBGz7Pvk2E2fo7oyz4aXt5i8=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=emas
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=
+# DB_USERNAME=
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
