--- a/.env
+++ b/.env
@@ -20,6 +20,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+MENTAL_PRICE_API=03bfdd449fe28828dda2bc41039e99c6
+
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
